update: trial 1 results

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ latex/main.blg
 latex/main.out
 latex/main.run.xml
 
-
+implementation/check-env&flow.ipynb
 implementation/main.py
 implementation/resnet.py
 implementation/unet.py
