update: poster and directory name from latex to report to figure out poster and report path

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,26 @@
 ref
 .DS_Store
-latex/main.aux
-latex/main.fdb_latexmk
-latex/main.fls
-latex/main.log
-latex/main.synctex.gz
-latex/main.toc
-latex/main.bbl
-latex/main.bcf
-latex/main.blg
-latex/main.out
-latex/main.run.xml
+report/main.aux
+report/main.fdb_latexmk
+report/main.fls
+report/main.log
+report/main.synctex.gz
+report/main.toc
+report/main.bbl
+report/main.bcf
+report/main.blg
+report/main.out
+report/main.run.xml
+
+poster/namkeen-poster.aux
+poster/namkeen-poster.bbl
+poster/namkeen-poster.bcf
+poster/namkeen-poster.blg
+poster/namkeen-poster.fdb_latexmk
+poster/namkeen-poster.fls
+poster/namkeen-poster.log
+poster/namkeen-poster.run.xml
+poster/namkeen-poster.synctex.gz
 
 implementation/check-env&flow.ipynb
 implementation/main.py
